@@ -187,6 +187,9 @@ class Chord : public ChordRest {
 
       ElementList& el()                { return _el; }
       const ElementList& el() const    { return _el; }
+
+      virtual QVariant getProperty(int propertyId) const;
+      virtual void setProperty(int propertyId, const QVariant&);
       };
 
 #endif
